<resources>

    <string name="app_name">EjercicioEmpleados</string>
    <string name="btnMainNuevoEmpleado">Nuevo empleado</string>
    <string name="btnMainListarEmpleados">Listar empleados</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCargarEmpleado">Cargar contacto</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="viewNombre">Nombre</string>
    <string name="viewApellido">Apellido</string>
    <string name="viewTelefono">Telefono</string>
    <string name="viewEdad">E-mail</string>
    <string name="db">my1.db</string>
</resources>